[package]
name = "xbg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bytemuck = { version = "1.13.1", features = ["derive"] }
futures-intrusive = "0.5.0"
image = "0.24.6"
libc = "0.2.146"
tokio = { version = "1.28.2", features = ["full"] }
wgpu = "0.16.1"
x11rb = { version = "0.12.0", features = ["randr", "image", "shm"] }
